更新 pyproject.toml，添加 requests 依赖以支持 HTTP 请求功能

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "MCP sandbox server for running code in containers"
 dependencies = [
     "mcp>=1.2.0",
     "docker>=6.1.0",
+    "requests>=2.25.0",
 ]
 
 [build-system]
